--- a/CameraWorks/app/src/main/res/layout/activity_main.xml
+++ b/CameraWorks/app/src/main/res/layout/activity_main.xml
@@ -41,16 +41,23 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:text="SNAP" />
+        android:backgroundTint="@android:color/holo_blue_light"
+        android:fontFamily="@font/bowlby_one_sc"
+        android:text="Snap"
+        android:textSize="14sp" />
 
     <Button
         android:id="@+id/button_no"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:visibility="invisible"
-        android:text="Retake" />
+        android:layout_alignParentStart="true"
+        android:backgroundTint="@android:color/holo_blue_light"
+        android:fontFamily="@font/bowlby_one_sc"
+        android:text="Retake"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/button_yes"
@@ -58,8 +65,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:visibility="invisible"
-        android:text="Proceed" />
+        android:backgroundTint="@android:color/holo_blue_light"
+        android:fontFamily="@font/bowlby_one_sc"
+        android:text="Proceed"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:visibility="invisible" />
 
 </RelativeLayout>
 
