--- a/CalendarInterface/app/src/main/res/layout/layout.xml
+++ b/CalendarInterface/app/src/main/res/layout/layout.xml
@@ -83,16 +83,6 @@
                 android:layout_row="0"
                 android:text="Start Time:" />
 
-            <EditText
-                android:id="@+id/editText5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="2"
-                android:layout_row="1"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Name" />
-
             <TextView
                 android:id="@+id/textView12"
                 android:layout_width="185dp"
@@ -109,26 +99,6 @@
                 android:layout_row="2"
                 android:text="End Time:" />
 
-            <EditText
-                android:id="@+id/editText7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="2"
-                android:layout_row="3"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Name" />
-
-
-            <EditText
-                android:id="@+id/editText6"
-                android:layout_width="185dp"
-                android:layout_height="wrap_content"
-                android:layout_column="0"
-                android:layout_row="3"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Name" />
 
             <TextView
                 android:id="@+id/textView15"
@@ -154,13 +124,37 @@
                 android:layout_row="5"
                 android:text="Daily" />
 
-            <AutoCompleteTextView
+            <Button
                 android:id="@+id/editText4"
                 android:layout_width="186dp"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
                 android:layout_row="1"
-                android:text="Name" />
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/editText5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="2"
+                android:layout_row="1"
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/editText6"
+                android:layout_width="186dp"
+                android:layout_height="wrap_content"
+                android:layout_column="0"
+                android:layout_row="3"
+                android:text="Button" />
+
+            <Button
+                android:id="@+id/editText7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_column="2"
+                android:layout_row="3"
+                android:text="Button" />
 
         </GridLayout>
 
